Fixed a minor issue with the alignment of the first section

--- a/css/style.css
+++ b/css/style.css
@@ -117,6 +117,7 @@ p {
 
 /*Setting the witdh for all the content*/
 .header-container {
+  width: 920px;
   margin: 0 auto;
   padding-top: 40px;
   padding-bottom: 30px;
